--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
 <head>
   <meta charset="utf-8">
   <title>Vardhan's Personal Site</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,900&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <link rel="stylesheet" href="css/styles.css">
   <div class="color-change">
 
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm Harshvardhan</h1>
       <p class="subtitle"> a web designer.</p>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="bottom-cloud" src="images/2cloud.png" alt="cloud-img">
       <img class="mountain-img" src="http://seanhalpin.io/assets/img/content/home/masthead/land.svg" alt="mountain-img">
     </div class="color-change">
     <div class="middle-container">
@@ -32,7 +31,7 @@
         <div class="skill-row">
           <img src="programming.png" alt="web-development" class="web">
           <h3>Design and Development</h3>
-          <p class="development"> I started learning to code when I was 15 years old because I wanted to make my own video games. Over time, I have gained a waelth of experience designing and developing mobile and web applications.</p>
+          <p class="development"> I started learning to code when I was 15 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications.</p>
         </div>
         <div class="skill-row">
           <img src="cricket.png" alt="cricket-img" class="cricket">
@@ -52,7 +51,7 @@
     </div>
 
 <div class="last-container">
-  <a class="insta" href="https://www.instagram.com/hxrshvrdhn.bxsht/"><h3>INSTGRAM</h3></a>
+  <a class="insta" href="https://www.instagram.com/hxrshvrdhn.bxsht/"><h3>INSTAGRAM</h3></a>
   <a class="yt"href="https://www.youtube.com/channel/UCtR9VpL54CVS6LtW4VOqNpA?view_as=subscriber"><h3>YOUTUBE</h3></a>
   <h3>© 2020 Harshvardhan Bisht</h3>
 
