--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm Harshvardhan</h1>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <p class="subtitle"> a web designer.</p>
-      <img class="bottom-cloud" src="images/2cloud.png" alt="cloud-img">
+
       <img class="mountain-img" src="http://seanhalpin.io/assets/img/content/home/masthead/land.svg" alt="mountain-img">
     </div class="color-change">
     <div class="middle-container">
