--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <div class="color-change">
 
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="cloud.png" alt="cloud-img">
       <h1>I'm Harshvardhan</h1>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
       <p class="subtitle"> a web designer.</p>
 
       <img class="mountain-img" src="http://seanhalpin.io/assets/img/content/home/masthead/land.svg" alt="mountain-img">
